Fixed menu layout issues

--- a/visual.css
+++ b/visual.css
@@ -108,6 +108,9 @@ body.Visual-workspace {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, .3), 0 3px 8px rgba(0, 0, 0, .3);
   padding: 3px 0;
   z-index: 10002;
+  overflow: auto;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .Visual-menu-line {
@@ -119,6 +122,7 @@ body.Visual-workspace {
 .Visual-menu-item {
   padding: 2px 8px;
   font: 12px Helvetica Neue, Helvetica, Arial, sans-serif;
+  white-space: pre;
 }
 
 .Visual-menu-item:hover {
